[package]
name = "db-internals"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Database internals in Rust — B-trees, WAL, ARIES recovery, query optimization, ACID transactions. Learn databases by reading Rust."
repository = "https://github.com/SuperInstance/db-internals"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
